Fix: set overflow to hidden, fix NaN result for continious operation after '=' function.

--- a/spawn.css
+++ b/spawn.css
@@ -31,11 +31,11 @@ body {
 
 .calculator {
     position: absolute;
-    top: 37vh;  
-    left: 8vw; 
+    top: 270px;       
+    left: 100px;      
     transform: translateY(-50%);
-    width: 35vw;     
-    height: 35vw;
+    width: 440px;     
+    height: 440px;   
     border-radius: 50%;
     background: rgba(0, 0, 0, 0.7);
     border: 3px solid #39ff14;
@@ -43,10 +43,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 15px;
     box-shadow: 0 0 20px #39ff14, 0 0 50px #39ff14, inset 0 0 15px #ff0000;
     animation: spawnGlow 3s infinite alternate;
 }
+
 
 
 @keyframes spawnGlow {
@@ -56,26 +57,30 @@ body {
 }
 
 .display {
-    width: 23vw;                 
-    height: 7vh;                  
-    border-radius: 8vh;           
+    width: 300px;      
+    height: 50px;       
+    border-radius: 76px; 
     background: rgba(0, 0, 0, 0.8);
     color: #03ff03;
-    font-size: 1.5vw;             
+    font-size: 24px;    
     text-align: right;
-    padding: 1vh 1vw;             
-    margin-bottom: 3vh;           
-    box-shadow: inset 0 0 1vh #39ff14;
+    padding: 11px 19px; 
+    margin-bottom: 20px;
+    box-shadow: inset 0 0 10px #39ff14;
+    overflow: hidden;
+
     overflow: hidden;        
     white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .buttons {
     display: grid;
-    grid-template-columns: repeat(4, 5vw); 
-    gap: 1vw;                              
+    grid-template-columns: repeat(4, 65px); 
+    gap: 10px;                              
     justify-content: center;
 }
+
 
 .delete,
 .clear {
@@ -86,10 +91,11 @@ button {
     border-radius: 50%;
     background: rgba(20, 20, 20, 0.8);
     color: #39ff14;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     border: none;
     box-shadow: 0 0 10px #39ff14, inset 0 0 5px #111;
     transition: all 0.2s ease-in-out;
+    padding: 3px;
 }
 
 button:hover {
@@ -98,29 +104,28 @@ button:hover {
     box-shadow: 0 0 15px #ff0000, inset 0 0 5px #39ff14;
 }
 
-
 .smoke-wrap {
     position: absolute;
-    bottom: 1vh;   
-    right: 33vw;    
-    width: 13vw;      
+    bottom: 3px;   
+    right: 330px;   
+    width: 250px;   
 }
 
 .smoke,
 .smoke2 {
     max-width: 500px;
+    animation: smoke1 3s linear infinite;
+    animation-delay: 0s; 
+    filter: brightness(0) invert(39%) sepia(100%) saturate(7500%) hue-rotate(95deg) drop-shadow(0 0 20px #39ff14) drop-shadow(0 0 50px #39ff14) drop-shadow(0 0 15px #39ff14);
 }
 
 .smoke {
-    animation: smoke1 3s linear infinite;
-    filter: drop-shadow(0 0 33px rgba(57, 255, 20, 0.6));
-    animation-delay: 0.1;
+    animation-delay: 0.0s;
 }
 
 .smoke2 {
     animation: smoke2 3s linear infinite;
-    filter: drop-shadow(0 0 15px rgba(57, 255, 20, 0.6));
-    animation-delay: 0.2;
+    animation-delay: 0.0s;
 }
 
 
